--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mrivera\AppData\Local\Temp\testng-eclipse-1853318264\testng-customsuite.xml</span>
+                    <span>C:\Users\dzuniga\AppData\Local\Temp\testng-eclipse-599324053\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="loginTests.TC_02_logout" class="method navigator-link" hash-for-method="TC_01">TC_01</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="loginTests.TC_01_Login" class="method navigator-link" hash-for-method="TC_01">TC_01</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">loginTests.TC_02_logout</span>
+              <span class="class-name">loginTests.TC_01_Login</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mrivera\AppData\Local\Temp\testng-eclipse-1853318264\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\dzuniga\AppData\Local\Temp\testng-eclipse-599324053\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +144,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;loginTests.TC_02_logout&quot;&gt;
+      &lt;class name=&quot;loginTests.TC_01_Login&quot;&gt;
         &lt;methods&gt;
           &lt;include name=&quot;TC_01&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- loginTests.TC_02_logout --&gt;
+      &lt;/class&gt; &lt;!-- loginTests.TC_01_Login --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,13 +191,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TC_01')
-data.setCell(0, 2, 'loginTests.TC_02_logout')
-data.setCell(0, 3, 2362);
+data.setCell(0, 2, 'loginTests.TC_01_Login')
+data.setCell(0, 3, 1890);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,18 +223,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">loginTests.TC_02_logout</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">loginTests.TC_01_Login</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">startWebDriver</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">TC_01</span>
-                <span class="method-start">1404 ms</span>
+                <span class="method-start">1626 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeDriver</span>
-                <span class="method-start">3769 ms</span>
+                <span class="method-start">3520 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
