--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fd068">  <td>21/11/12 20:58:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC_01_Login.startWebDriver()[pri:0, instance:loginTests.TC_01_Login@3fc08eec]">&gt;&gt;startWebDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917935693</td>   <td></td> </tr>
-<tr bgcolor="9fd068">  <td>21/11/12 20:58:55</td>   <td>1618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Login.TC_01()[pri:0, instance:loginTests.TC_01_Login@3fc08eec]">TC_01</td> 
-  <td>main@917935693</td>   <td></td> </tr>
-<tr bgcolor="9fd068">  <td>21/11/12 20:58:57</td>   <td>3512</td> <td>&nbsp;</td><td title="&lt;&lt;TC_01_Login.closeDriver()[pri:0, instance:loginTests.TC_01_Login@3fc08eec]">&lt;&lt;closeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917935693</td>   <td></td> </tr>
+<tr bgcolor="b485ba">  <td>21/11/19 20:01:59</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC_01_Login.startWebDriver()[pri:0, instance:loginTests.TC_01_Login@1021f6c9]">&gt;&gt;startWebDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1073741635</td>   <td></td> </tr>
+<tr bgcolor="b485ba">  <td>21/11/19 20:02:00</td>   <td>1136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Login.TC_01()[pri:0, instance:loginTests.TC_01_Login@1021f6c9]">TC_01</td> 
+  <td>main@1073741635</td>   <td></td> </tr>
+<tr bgcolor="b485ba">  <td>21/11/19 20:02:02</td>   <td>2689</td> <td>&nbsp;</td><td title="&lt;&lt;TC_01_Login.closeDriver()[pri:0, instance:loginTests.TC_01_Login@1021f6c9]">&lt;&lt;closeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1073741635</td>   <td></td> </tr>
 </table>
